corrected alignment temporarily

--- a/Paintings/paintings.css
+++ b/Paintings/paintings.css
@@ -64,9 +64,11 @@
   .mask-off-girl-framed{
     height: 400px;
     width: auto;
+    margin-left: 70px;
   }
   .aligator-eye-framed{
     height: 350px;
+    margin-left: 70px;
   }
   .first-and-last-drawing{
     height: 214px;
